--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <canvas id="tetris" width="240" height="400"></canvas>
+  <link rel="stylesheet" href="tetris.css">
   <script src="tetris.js"></script>
 </body>
 </html>
