--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Multiplayer Tetris Game</title>
 </head>
 <body>
+  <div>
+    <h4>Score:</h4>
+    <h1 id="playerScore"></h1>
+  </div>
   <canvas id="tetris" width="240" height="400"></canvas>
   <link rel="stylesheet" href="tetris.css">
   <script src="tetris.js"></script>
