--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </div>
   <canvas id="tetris" width="240" height="400"></canvas>
   <link rel="stylesheet" href="tetris.css">
-  <script src="tetris.js"></script>
+  <script type="module" src="tetris.js"></script>
 </body>
 </html>
