move index.html into frontend dir

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multiplayer Tetris Game</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Document</title>
 </head>
 <body>
-  <h3 id="playerScore"></h3>
-  <canvas id="tetris" width="240" height="400"></canvas>
-  <link rel="stylesheet" href="tetris.css">
-  <script type="module" src="tetris.js"></script>
+  <script>
+    const ws = new WebSocket("ws://localhost:5555/ws");
+    ws.opopen = (e) => console.log(e)
+    console.log("Attempting to connect...");
+    ws.onmessage = e => console.log(e)
+  </script>
 </body>
 </html>
