add main script to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-  <script>
-    const ws = new WebSocket("ws://localhost:5555/ws");
-    ws.opopen = (e) => console.log(e)
-    console.log("Attempting to connect...");
-    ws.onmessage = e => console.log(e)
-  </script>
+  <script type="module" src="main.js"></script>
 </body>
+
 </html>
